Phase 1 Cleanup: Remove legacy files and clean up code
- Deleted 12 legacy files (~116KB):
  - 8 legacy React components (App.jsx, App.css, KanbanBoard.jsx, etc.)
  - 4 outdated documentation files
  - .DS_Store system file
- Updated .gitignore to remove legacy file patterns
- Fixed unescaped entity: 'This Week's Goals' → 'This Week&apos;s Goals'
- Removed unused imports: Code, Menu, Star, Filter, Zap
- Removed unused variables: error, index
- Reduced build warnings from 64 to 58

Project is now cleaner and more professional.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ next-env.d.ts
 *.swo
 
 # OS
+.DS_Store
+**/.DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
@@ -101,16 +103,4 @@ temp/
 *.sln
 *.sw?
 
-# Legacy files (old React components)
-App.css
-App.jsx
-KanbanBoard.jsx
-ProgressCharts.jsx
-TaskManager.jsx
-dataManager.js
-index.html
-todo.md
-Dashboard Structure & Tracking Categories.md
-Detailed Milestone Plan: Budgeting SaaS Development.md
-SaaS Project Analysis: Notion-like Budgeting App.md
-Solo Founder Dashboard - User Guide.md
+
